完成随机任务生成与HEFT任务调度使用库的封装

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,9 @@
         "condition_variable": "cpp",
         "ctime": "cpp",
         "ratio": "cpp",
-        "mutex": "cpp"
+        "mutex": "cpp",
+        "strstream": "cpp",
+        "iomanip": "cpp",
+        "cinttypes": "cpp"
     }
 }
