构建了一个html可视化界面调用的接口实例，能够在发送子任务数量和边密度后获取子任务调度策略

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,15 @@
         "mutex": "cpp",
         "strstream": "cpp",
         "iomanip": "cpp",
-        "cinttypes": "cpp"
+        "cinttypes": "cpp",
+        "any": "cpp",
+        "bitset": "cpp",
+        "csignal": "cpp",
+        "set": "cpp",
+        "unordered_set": "cpp",
+        "regex": "cpp",
+        "future": "cpp",
+        "shared_mutex": "cpp",
+        "variant": "cpp"
     }
 }
